fixes padding issue on mobile for about page

--- a/src/styles/media-queries.css
+++ b/src/styles/media-queries.css
@@ -74,4 +74,8 @@
   .index img {
     max-width: 100%;
   }
+
+  .about {
+    padding-block-start: 100px;
+  }
 }
